feat: create merchant account
