# dto/merchant-registration-dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type MerchantRegistrationDto struct {
+	AccountHolderName string `json:"accountHolderName"`
+	MerchantID        string `json:"merchantId"`
+	MerchantPassword  string `json:"merchantPassword"`
+}
