# routes/routes.go
@@ -1,22 +1,41 @@
 package routes
 
 import (
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
+	"github.com/sep-2024-team-35/bank-servce-back-end/config"
 	"github.com/sep-2024-team-35/bank-servce-back-end/handlers"
+	"github.com/sep-2024-team-35/bank-servce-back-end/repositories"
+	"github.com/sep-2024-team-35/bank-servce-back-end/services"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"time"
 
 	_ "github.com/sep-2024-team-35/bank-servce-back-end/docs"
 )
 
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
-	
+
+	r.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"https://localhost:8443", "http://localhost:8080", "http://localhost:3000"},
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Accept", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	}))
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	accountRepo := repositories.NewAccountRepository(config.DB)
+	accountService := services.NewAccountService(accountRepo)
+	accountHandler := handlers.NewAccountHandler(accountService)
 
 	api := r.Group("/api")
 	{
 		api.GET("/test", handlers.TestHandler)
+		api.POST("/account/register", accountHandler.RegisterNewMerchant)
 	}
 
 	return r
